# goit-pythonweb-hw-04

./: .gitingnore  Makefile  main.py  pyproject.toml
asyncFunctions/: copy_file.py  read_folder.py
output folder/py/: task3.py
output folder/txt/: Tsk.txt
source folder/: task5.js  task5.txt
